# Blunder

./: CMakeLists.txt  README.md  laplacian_editing.cpp  lattice.h  nate.cpp  nate.h  smoother.cpp  testmain.cpp  ui.cpp
Resource/Geometry/: cut_sphere.stl
Resource/Primitive/: cube.stl
src/: CMakeLists.txt  laplacian_editing.h  mesh.cpp  mesh.h  smoother.h  stlviewer.cpp  test2.cpp
src/Resource/Geometry/: T_block.stl  avatar.stl  camera_cover_lower.stl  camera_cover_upper.stl
src/Resource/Primitive/: sphere.stl
